--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 PORT = 3000
+
+HOST = http://localhost:3000/api/
+SMTP_HOST = sandbox.smtp.mailtrap.io
+SMTP_PORT = 2525
+SMTP_USER = 26464e29c5128a
+SMTP_PASS = 39115f672f87a2
+SMTP_FROM = test@admin.com
+
