--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "zod": "^3.23.8"
