--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "slugify": "^1.6.6",
     "zod": "^3.23.8"
   }
 }
